@@ -16,48 +16,31 @@
  * limitations under the License.                                          *
  ***************************************************************************/
 
-#ifndef _SLG_SHAPE_H
-#define	_SLG_SHAPE_H
+#ifndef _SLG_ISLANDAOVSHAPE_H
+#define	_SLG_ISLANDAOVSHAPE_H
 
-#include <vector>
+#include <string>
 
-namespace luxrays {
-	class ExtTriangleMesh;
-}
+#include "slg/shapes/shape.h"
 
 namespace slg {
 
-class Scene;
-
-class Shape {
+class IslandAOVShape : public Shape {
 public:
-	typedef enum {
-		MESH,
-		POINTINESS,
-		STRANDS,
-		GROUP,
-		SUBDIV,
-		DISPLACEMENT,
-		HARLEQUIN,
-		SIMPLIFY,
-		ISLANDAOV
-	} ShapeType;
+	IslandAOVShape(luxrays::ExtTriangleMesh *srcMesh, const u_int dataIndex);
+	virtual ~IslandAOVShape();
 
-	Shape() : refined(false) { }
-	virtual ~Shape() { }
-
-	virtual ShapeType GetType() const = 0;
-
-	// Note: this method can be called only once and the object is not usable
-	// anymore (this is mostly due to optimize memory management).
-	luxrays::ExtTriangleMesh *Refine(const Scene *scene);
+	virtual ShapeType GetType() const { return ISLANDAOV; }
 
 protected:
-	virtual luxrays::ExtTriangleMesh *RefineImpl(const Scene *scene) = 0;
-	
-	bool refined;
+	bool IsSameVertex(const luxrays::ExtTriangleMesh *srcMesh,
+		const u_int vertex1Index, const u_int vertex2Index) const;
+
+	virtual luxrays::ExtTriangleMesh *RefineImpl(const Scene *scene);
+
+	luxrays::ExtTriangleMesh *mesh;
 };
 
 }
 
-#endif	/* _SLG_SHAPE_H */
+#endif	/* _SLG_ISLANDAOVSHAPE_H */
