@@ -1,0 +1,75 @@
+ply
+format ascii 1.0
+comment Created by Blender 2.83 (sub 6) - www.blender.org, source file: ''
+element vertex 48
+property float x
+property float y
+property float z
+property float nx
+property float ny
+property float nz
+property float s
+property float t
+element face 12
+property list uchar uint vertex_indices
+end_header
+-1.885424 0.264573 0.229614 -1.000000 -0.000000 0.000000 0.375000 0.000000
+-1.885424 0.264573 1.518352 -1.000000 -0.000000 0.000000 0.625000 0.000000
+-1.885424 1.553311 1.518352 -1.000000 -0.000000 0.000000 0.625000 0.250000
+-1.885424 1.553311 0.229614 -1.000000 -0.000000 0.000000 0.375000 0.250000
+-1.885424 1.553311 0.229614 0.000000 1.000000 0.000000 0.375000 0.250000
+-1.885424 1.553311 1.518352 0.000000 1.000000 0.000000 0.625000 0.250000
+-0.596686 1.553311 1.518352 0.000000 1.000000 0.000000 0.625000 0.500000
+-0.596686 1.553311 0.229614 0.000000 1.000000 0.000000 0.375000 0.500000
+-0.596686 1.553311 0.229614 1.000000 -0.000000 0.000000 0.375000 0.500000
+-0.596686 1.553311 1.518352 1.000000 -0.000000 0.000000 0.625000 0.500000
+-0.596686 0.264573 1.518352 1.000000 -0.000000 0.000000 0.625000 0.750000
+-0.596686 0.264573 0.229614 1.000000 -0.000000 0.000000 0.375000 0.750000
+-0.596686 0.264573 0.229614 0.000000 -1.000000 0.000000 0.375000 0.750000
+-0.596686 0.264573 1.518352 0.000000 -1.000000 0.000000 0.625000 0.750000
+-1.885424 0.264573 1.518352 0.000000 -1.000000 0.000000 0.625000 1.000000
+-1.885424 0.264573 0.229614 0.000000 -1.000000 0.000000 0.375000 1.000000
+-1.885424 1.553311 0.229614 0.000000 0.000000 -1.000000 0.125000 0.500000
+-0.596686 1.553311 0.229614 0.000000 0.000000 -1.000000 0.375000 0.500000
+-0.596686 0.264573 0.229614 0.000000 0.000000 -1.000000 0.375000 0.750000
+-1.885424 0.264573 0.229614 0.000000 0.000000 -1.000000 0.125000 0.750000
+-0.596686 1.553311 1.518352 0.000000 -0.000000 1.000000 0.625000 0.500000
+-1.885424 1.553311 1.518352 0.000000 -0.000000 1.000000 0.875000 0.500000
+-1.885424 0.264573 1.518352 0.000000 -0.000000 1.000000 0.875000 0.750000
+-0.596686 0.264573 1.518352 0.000000 -0.000000 1.000000 0.625000 0.750000
+0.362087 -1.053765 0.519404 -1.000000 -0.000000 0.000000 0.375000 0.000000
+0.362087 -1.053765 1.228561 -1.000000 -0.000000 0.000000 0.625000 0.000000
+0.362087 -0.344607 1.228561 -1.000000 -0.000000 0.000000 0.625000 0.250000
+0.362087 -0.344607 0.519404 -1.000000 -0.000000 0.000000 0.375000 0.250000
+0.362087 -0.344607 0.519404 0.000000 1.000000 0.000000 0.375000 0.250000
+0.362087 -0.344607 1.228561 0.000000 1.000000 0.000000 0.625000 0.250000
+1.071244 -0.344607 1.228561 0.000000 1.000000 0.000000 0.625000 0.500000
+1.071244 -0.344607 0.519404 0.000000 1.000000 0.000000 0.375000 0.500000
+1.071244 -0.344607 0.519404 1.000000 -0.000000 0.000000 0.375000 0.500000
+1.071244 -0.344607 1.228561 1.000000 -0.000000 0.000000 0.625000 0.500000
+1.071244 -1.053765 1.228561 1.000000 -0.000000 0.000000 0.625000 0.750000
+1.071244 -1.053765 0.519404 1.000000 -0.000000 0.000000 0.375000 0.750000
+1.071244 -1.053765 0.519404 0.000000 -1.000000 0.000000 0.375000 0.750000
+1.071244 -1.053765 1.228561 0.000000 -1.000000 0.000000 0.625000 0.750000
+0.362087 -1.053765 1.228561 0.000000 -1.000000 0.000000 0.625000 1.000000
+0.362087 -1.053765 0.519404 0.000000 -1.000000 0.000000 0.375000 1.000000
+0.362087 -0.344607 0.519404 0.000000 0.000000 -1.000000 0.125000 0.500000
+1.071244 -0.344607 0.519404 0.000000 0.000000 -1.000000 0.375000 0.500000
+1.071244 -1.053765 0.519404 0.000000 0.000000 -1.000000 0.375000 0.750000
+0.362087 -1.053765 0.519404 0.000000 0.000000 -1.000000 0.125000 0.750000
+1.071244 -0.344607 1.228561 0.000000 -0.000000 1.000000 0.625000 0.500000
+0.362087 -0.344607 1.228561 0.000000 -0.000000 1.000000 0.875000 0.500000
+0.362087 -1.053765 1.228561 0.000000 -0.000000 1.000000 0.875000 0.750000
+1.071244 -1.053765 1.228561 0.000000 -0.000000 1.000000 0.625000 0.750000
+4 0 1 2 3
+4 4 5 6 7
+4 8 9 10 11
+4 12 13 14 15
+4 16 17 18 19
+4 20 21 22 23
+4 24 25 26 27
+4 28 29 30 31
+4 32 33 34 35
+4 36 37 38 39
+4 40 41 42 43
+4 44 45 46 47
