@@ -1,0 +1,135 @@
+ply
+format ascii 1.0
+comment Created by Blender 2.83 (sub 6) - www.blender.org, source file: ''
+element vertex 96
+property float x
+property float y
+property float z
+property float nx
+property float ny
+property float nz
+property float s
+property float t
+element face 24
+property list uchar uint vertex_indices
+end_header
+-1.419597 -1.547928 0.154070 -0.949293 -0.256474 -0.181833 0.375000 0.000000
+-1.588156 -1.639345 1.163007 -0.949293 -0.256474 -0.181833 0.625000 0.000000
+-1.863545 -0.650917 1.206557 -0.949293 -0.256474 -0.181833 0.625000 0.250000
+-1.694986 -0.559501 0.197620 -0.949293 -0.256474 -0.181833 0.375000 0.250000
+-1.694986 -0.559501 0.197620 -0.268150 0.962444 0.042405 0.375000 0.250000
+-1.863545 -0.650917 1.206557 -0.268150 0.962444 0.042405 0.625000 0.250000
+-0.888623 -0.387519 1.393300 -0.268150 0.962444 0.042405 0.625000 0.500000
+-0.720064 -0.296102 0.384362 -0.268150 0.962444 0.042405 0.375000 0.500000
+-0.720064 -0.296102 0.384362 0.949293 0.256474 0.181833 0.375000 0.500000
+-0.888623 -0.387519 1.393300 0.949293 0.256474 0.181833 0.625000 0.500000
+-0.613234 -1.375947 1.349750 0.949293 0.256474 0.181833 0.625000 0.750000
+-0.444674 -1.284530 0.340812 0.949293 0.256474 0.181833 0.375000 0.750000
+-0.444674 -1.284530 0.340812 0.268150 -0.962444 -0.042405 0.375000 0.750000
+-0.613234 -1.375947 1.349750 0.268150 -0.962444 -0.042405 0.625000 0.750000
+-1.588156 -1.639345 1.163007 0.268150 -0.962444 -0.042405 0.625000 1.000000
+-1.419597 -1.547928 0.154070 0.268150 -0.962444 -0.042405 0.375000 1.000000
+-1.694986 -0.559501 0.197620 0.164129 0.089013 -0.982415 0.125000 0.500000
+-0.720064 -0.296102 0.384362 0.164129 0.089013 -0.982415 0.375000 0.500000
+-0.444674 -1.284530 0.340812 0.164129 0.089013 -0.982415 0.375000 0.750000
+-1.419597 -1.547928 0.154070 0.164129 0.089013 -0.982415 0.125000 0.750000
+-0.888623 -0.387519 1.393300 -0.164129 -0.089013 0.982415 0.625000 0.500000
+-1.863545 -0.650917 1.206557 -0.164129 -0.089013 0.982415 0.875000 0.500000
+-1.588156 -1.639345 1.163007 -0.164129 -0.089013 0.982415 0.875000 0.750000
+-0.613234 -1.375947 1.349750 -0.164129 -0.089013 0.982415 0.625000 0.750000
+-1.885424 0.264573 0.229614 -1.000000 -0.000000 -0.000000 0.375000 0.000000
+-1.885424 0.264573 1.518352 -1.000000 -0.000000 -0.000000 0.625000 0.000000
+-1.885424 1.553311 1.518352 -1.000000 -0.000000 -0.000000 0.625000 0.250000
+-1.885424 1.553311 0.229614 -1.000000 -0.000000 -0.000000 0.375000 0.250000
+-1.885424 1.553311 0.229614 0.000000 1.000000 0.000000 0.375000 0.250000
+-1.885424 1.553311 1.518352 0.000000 1.000000 0.000000 0.625000 0.250000
+-0.596686 1.553311 1.518352 0.000000 1.000000 0.000000 0.625000 0.500000
+-0.596686 1.553311 0.229614 0.000000 1.000000 0.000000 0.375000 0.500000
+-0.596686 1.553311 0.229614 1.000000 0.000000 0.000000 0.375000 0.500000
+-0.596686 1.553311 1.518352 1.000000 0.000000 0.000000 0.625000 0.500000
+-0.596686 0.264573 1.518352 1.000000 0.000000 0.000000 0.625000 0.750000
+-0.596686 0.264573 0.229614 1.000000 0.000000 0.000000 0.375000 0.750000
+-0.596686 0.264573 0.229614 -0.000000 -1.000000 -0.000000 0.375000 0.750000
+-0.596686 0.264573 1.518352 -0.000000 -1.000000 -0.000000 0.625000 0.750000
+-1.885424 0.264573 1.518352 -0.000000 -1.000000 -0.000000 0.625000 1.000000
+-1.885424 0.264573 0.229614 -0.000000 -1.000000 -0.000000 0.375000 1.000000
+-1.885424 1.553311 0.229614 -0.000000 0.000000 -1.000000 0.125000 0.500000
+-0.596686 1.553311 0.229614 -0.000000 0.000000 -1.000000 0.375000 0.500000
+-0.596686 0.264573 0.229614 -0.000000 0.000000 -1.000000 0.375000 0.750000
+-1.885424 0.264573 0.229614 -0.000000 0.000000 -1.000000 0.125000 0.750000
+-0.596686 1.553311 1.518352 0.000000 0.000000 1.000000 0.625000 0.500000
+-1.885424 1.553311 1.518352 0.000000 0.000000 1.000000 0.875000 0.500000
+-1.885424 0.264573 1.518352 0.000000 0.000000 1.000000 0.875000 0.750000
+-0.596686 0.264573 1.518352 0.000000 0.000000 1.000000 0.625000 0.750000
+0.362087 -1.053765 0.519404 -1.000000 -0.000000 0.000000 0.375000 0.000000
+0.362087 -1.053765 1.228561 -1.000000 -0.000000 0.000000 0.625000 0.000000
+0.362087 -0.344607 1.228561 -1.000000 -0.000000 0.000000 0.625000 0.250000
+0.362087 -0.344607 0.519404 -1.000000 -0.000000 0.000000 0.375000 0.250000
+0.362087 -0.344607 0.519404 0.000000 1.000000 -0.000000 0.375000 0.250000
+0.362087 -0.344607 1.228561 0.000000 1.000000 -0.000000 0.625000 0.250000
+1.071244 -0.344607 1.228561 0.000000 1.000000 -0.000000 0.625000 0.500000
+1.071245 -0.344607 0.519404 0.000000 1.000000 -0.000000 0.375000 0.500000
+1.071245 -0.344607 0.519404 1.000000 -0.000000 0.000000 0.375000 0.500000
+1.071244 -0.344607 1.228561 1.000000 -0.000000 0.000000 0.625000 0.500000
+1.071244 -1.053765 1.228561 1.000000 -0.000000 0.000000 0.625000 0.750000
+1.071244 -1.053765 0.519404 1.000000 -0.000000 0.000000 0.375000 0.750000
+1.071244 -1.053765 0.519404 -0.000000 -1.000000 -0.000000 0.375000 0.750000
+1.071244 -1.053765 1.228561 -0.000000 -1.000000 -0.000000 0.625000 0.750000
+0.362087 -1.053765 1.228561 -0.000000 -1.000000 -0.000000 0.625000 1.000000
+0.362087 -1.053765 0.519404 -0.000000 -1.000000 -0.000000 0.375000 1.000000
+0.362087 -0.344607 0.519404 0.000000 0.000000 -1.000000 0.125000 0.500000
+1.071245 -0.344607 0.519404 0.000000 0.000000 -1.000000 0.375000 0.500000
+1.071244 -1.053765 0.519404 0.000000 0.000000 -1.000000 0.375000 0.750000
+0.362087 -1.053765 0.519404 0.000000 0.000000 -1.000000 0.125000 0.750000
+1.071244 -0.344607 1.228561 0.000000 -0.000000 1.000000 0.625000 0.500000
+0.362087 -0.344607 1.228561 0.000000 -0.000000 1.000000 0.875000 0.500000
+0.362087 -1.053765 1.228561 0.000000 -0.000000 1.000000 0.875000 0.750000
+1.071244 -1.053765 1.228561 0.000000 -0.000000 1.000000 0.625000 0.750000
+0.132891 0.721110 0.276033 -0.950829 0.297877 -0.084813 0.375000 0.000000
+0.132891 0.952201 1.087663 -0.950829 0.297877 -0.084813 0.625000 0.000000
+0.394256 1.723922 0.867935 -0.950829 0.297877 -0.084813 0.625000 0.250000
+0.394256 1.492832 0.056305 -0.950829 0.297877 -0.084813 0.375000 0.250000
+0.394256 1.492832 0.056305 0.309715 0.914484 -0.260376 0.375000 0.250000
+0.394256 1.723922 0.867935 0.309715 0.914484 -0.260376 0.625000 0.250000
+1.196649 1.472548 0.939507 0.309715 0.914484 -0.260376 0.625000 0.500000
+1.196649 1.241457 0.127878 0.309715 0.914484 -0.260376 0.375000 0.500000
+1.196649 1.241457 0.127878 0.950829 -0.297877 0.084813 0.375000 0.500000
+1.196649 1.472548 0.939507 0.950829 -0.297877 0.084813 0.625000 0.500000
+0.935284 0.700827 1.159235 0.950829 -0.297877 0.084813 0.625000 0.750000
+0.935284 0.469736 0.347606 0.950829 -0.297877 0.084813 0.375000 0.750000
+0.935284 0.469736 0.347606 -0.309715 -0.914484 0.260376 0.375000 0.750000
+0.935284 0.700827 1.159235 -0.309715 -0.914484 0.260376 0.625000 0.750000
+0.132891 0.952201 1.087663 -0.309715 -0.914484 0.260376 0.625000 1.000000
+0.132891 0.721110 0.276033 -0.309715 -0.914484 0.260376 0.375000 1.000000
+0.394256 1.492832 0.056305 -0.000000 -0.273841 -0.961775 0.125000 0.500000
+1.196649 1.241457 0.127878 -0.000000 -0.273841 -0.961775 0.375000 0.500000
+0.935284 0.469736 0.347606 -0.000000 -0.273841 -0.961775 0.375000 0.750000
+0.132891 0.721110 0.276033 -0.000000 -0.273841 -0.961775 0.125000 0.750000
+1.196649 1.472548 0.939507 0.000000 0.273841 0.961775 0.625000 0.500000
+0.394256 1.723922 0.867935 0.000000 0.273841 0.961775 0.875000 0.500000
+0.132891 0.952201 1.087663 0.000000 0.273841 0.961775 0.875000 0.750000
+0.935284 0.700827 1.159235 0.000000 0.273841 0.961775 0.625000 0.750000
+4 0 1 2 3
+4 4 5 6 7
+4 8 9 10 11
+4 12 13 14 15
+4 16 17 18 19
+4 20 21 22 23
+4 24 25 26 27
+4 28 29 30 31
+4 32 33 34 35
+4 36 37 38 39
+4 40 41 42 43
+4 44 45 46 47
+4 48 49 50 51
+4 52 53 54 55
+4 56 57 58 59
+4 60 61 62 63
+4 64 65 66 67
+4 68 69 70 71
+4 72 73 74 75
+4 76 77 78 79
+4 80 81 82 83
+4 84 85 86 87
+4 88 89 90 91
+4 92 93 94 95
