@@ -1,0 +1,14 @@
+film.width = 800
+film.height = 600
+scene.file = scenes/islandaovshape/cubes.scn
+##
+# Film outputs
+film.outputs.1.type = RGB_IMAGEPIPELINE
+film.outputs.1.index = 0
+film.outputs.1.filename = normal.png
+##
+# Film image pipeline plug-ins
+film.imagepipelines.0.0.type = TONEMAP_LINEAR
+film.imagepipelines.0.0.scale = 1.2
+film.imagepipelines.0.1.type = GAMMA_CORRECTION
+film.imagepipelines.0.1.value = 2.2
