@@ -1,0 +1,54 @@
+scene.camera.lookat.orig = 0.9 -3.7 3.0
+scene.camera.lookat.target = -0.5 0.0 0.5
+scene.camera.fieldofview = 55
+################################################################################
+scene.textures.aovtex.type = hitpointtriangleaov
+scene.textures.aovtex.dataindex = 0
+scene.textures.scaletex.type = scale
+scene.textures.scaletex.texture1 = aovtex
+scene.textures.scaletex.texture2 = 0.33
+scene.textures.bandtex.type = band
+scene.textures.bandtex.amount = scaletex
+scene.textures.bandtex.offset0 = 0.0
+scene.textures.bandtex.value0 = 0.75 0.0 0.0
+scene.textures.bandtex.offset1 = 0.33
+scene.textures.bandtex.value1 = 0.0 0.75 0.0
+scene.textures.bandtex.offset2 = 0.66
+scene.textures.bandtex.value2 = 0.0 0.0 0.75
+scene.textures.bandtex.offset3 = 1
+scene.textures.bandtex.value3 = 0.75 0.75 0.0
+################################################################################
+scene.materials.cubemat.type = matte
+scene.materials.cubemat.kd = bandtex
+##
+scene.materials.whitematte.type = matte
+scene.materials.whitematte.kd = 0.75 0.75 0.75
+##
+scene.materials.blacktext.type = matte
+scene.materials.blacktext.kd = 0.05 0.05 0.05
+################################################################################
+scene.shapes.cubes.type = mesh
+scene.shapes.cubes.ply = scenes/islandaovshape/4cubes.ply
+scene.shapes.cubesaov.type = islandaov
+scene.shapes.cubesaov.source = cubes
+scene.shapes.cubesaov.dataindex = 0
+################################################################################
+scene.shapes.room.type = mesh
+scene.shapes.room.ply = scenes/luxball/room-nowall.ply
+scene.shapes.blacktext.type = mesh
+scene.shapes.blacktext.ply = scenes/luxball/blacktext.ply
+################################################################################
+scene.objects.cubes.material = cubemat
+scene.objects.cubes.shape = cubesaov
+##
+scene.objects.room.material = whitematte
+scene.objects.room.shape = room
+##
+scene.objects.blacktext.material = blacktext
+scene.objects.blacktext.shape = blacktext
+################################################################################
+scene.lights.infinitelight.type = infinite
+scene.lights.infinitelight.file = scenes/simple-mat/arch.exr
+scene.lights.infinitelight.gamma = 1.0
+scene.lights.infinitelight.gain = 3.0 3.0 3.0
+scene.lights.infinitelight.storage = byte
