@@ -500,6 +500,7 @@ set(SLG_CORE_SRCS
 	${LuxRays_SOURCE_DIR}/src/slg/shapes/displacement.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/shapes/groupshape.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/shapes/harlequinshape.cpp
+	${LuxRays_SOURCE_DIR}/src/slg/shapes/islandaovshape.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/shapes/meshshape.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/shapes/pointiness.cpp
 	${LuxRays_SOURCE_DIR}/src/slg/shapes/shape.cpp
