@@ -14,6 +14,7 @@
 * Pointiness shape can now assign curvature values to vertex AOV with .aovindex property (a 4294967296 value will force the use of alpha channel instead, defualt value for compatibility with the past)
 * LuxCore API has now SetMeshVertexAOV() and SetMeshTriangleAOV() methods to set geometry vertex and triangle AOV
 * Added the support for new Random texture
+* Added the support for the new IslandAOV shape
 
 ### Fixed Bugs
 
